src/shared/layout/Sidebar/Sidebar.module.scss
@use '@/styles/tokens' as *;
@use '@/styles/mixins' as *;

$header-height-desktop: 71px;
$header-height-tablet: 63px;

.sidebar {
    background-color: $white;
    border-right: $border solid $gray-light;
    grid-area: sidebar;
    height: calc(100vh - $header-height-desktop);
    padding: $space-4 $space-3;
    position: fixed;
    top: $header-height-desktop;
    transform: translateX(0);
    transition: transform 0.3s ease;
    width: 206px;

    &.open {
        transform: translateX(0);
    }

    .menu {
        display: flex;
        flex-direction: column;
        gap: $space-5;

        .menuItem,
        .submenuItem {
            color: $gray-darkest;
            font-size: $text-xl;
            font-weight: $font-medium;
        }

        .menuItem {
            padding: $space-1 $space-2;
        }
    }

    @include media-down(md) {
        height: calc(100vh - $header-height-tablet);
        top: $header-height-tablet;
        transform: translateX(-100%);

        &.open {
            transform: translateX(0);
        }
    }
}

